Java 5 Use auto-boxing or Long.valueOf for primary to Object conversion
git-svn-id: https://scm.mmbase.org/mmbase/trunk@22634 91430c5f-d668-0410-9e7d-dd663366dcfd